[project]
name = "hytea"
version = "0.9.0"
description = "Hyperparameter Tuning using Evolutionary Algorithms"
authors = [
  { name = "Josef Hamelink" },
  { name = "Shreyansh Sharma" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'numpy',
    'pandas',
    'scikit-learn',
    'matplotlib',
    'jupyter',
    'ipykernel',
    'seaborn',
    'gymnasium',
    'torch',
    'wandb',
    'tqdm',
    'randomname',
    "swig>=4.3.1",
]

[project.scripts]
hytea = "hytea.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
